Bug 531716 - [13] Support for JEP 355 Text Block
Fix scenario when a text block has a line ending with explicit \n

Change-Id: I53561519e6f4ae142f200d65a38d63f80fec23f3
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>